--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@tailwindcss/vite": "^4.1.18",
+    "clsx": "^2.1.1",
     "daisyui": "^5.5.14",
+    "lenis": "^1.3.17",
+    "motion": "^12.27.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.11.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.10"
   },
